--- a/tabadol/templates/create_post.html
+++ b/tabadol/templates/create_post.html
@@ -9,7 +9,12 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">{{ legend }}</legend>
+               {% for field, errors in form.errors.items() %}
+            <div class="alert alert-error">
+              {{ form[field].label }}: {{ ', '.join(errors) }}
+            </div>
+{% endfor %}
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
                 <div class="form-group">
                     {{ form.title.label(class="form-control-label") }}
                     {% if form.title.errors %}
@@ -36,28 +41,7 @@
                    {% else %}
                    {{ form.offer_type(class="form-control-label", placeholder="Type") }}
                    {% endif %}
-              </div>
-              <div class="form-group address">
-                   {{ form.address.label(class="form-control-label") }}
-
-                   {% if form.address.errors %}
-                  <div id="addressField">
-                  <input id="autocomplete" placeholder="Enter your address"  type="text" class="form-control">
-                  </div>
-                  <p id="details"></p>
-                  <div class="invalid-feedback">
-                      {% for error in form.address.errors %}
-                      <span>{{ error }}</span>
-                      {% endfor %}
-                  </div>
-                  {% else %}
-                  <div id="addressField">
-                  <input id="autocomplete" placeholder="Enter your address"  type="text" class="form-control">
-                  </div>
-                   <p id="details"></p>
-
-                  {% endif %}
-               </div>
+                </div>
                 <div class="form-group content">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
