--- a/tabadol/templates/create_post.html
+++ b/tabadol/templates/create_post.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block head %}
-
-<script src="{{ url_for('static', filename='javascript/map-address-field.js') }}"></script>
+<script src="{{ url_for('static', filename='autocomplete.js') }}"></script>
 
 {% endblock %}
 {% block content %}
@@ -42,6 +41,24 @@
                    {{ form.offer_type(class="form-control-label", placeholder="Type") }}
                    {% endif %}
                 </div>
+                <div class="form-group addresses pac-container" >
+                    {{ form.addresses.label(class="form-control-label pac-input", type="text", placeholder="Enter a location") }}
+                    <!--        <div id="pac-container" class="addresses">-->
+                    <input id="pac-input" class="addresses" type="text" placeholder="Location" autocomplete="off" />
+                    <div id="map"></div>
+
+                    </div>
+                </div>
+                   {% if form.addresses.errors %}
+               <div class="invalid-feedback">
+                    {% for error in form.addresses.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                  {% else %}
+                    {{ form.addresses(class="form-control form-control-label",  placeholder="location") }}
+                  {% endif %}
+                </div>
                 <div class="form-group content">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
@@ -61,4 +78,8 @@
             </div>
         </form>
     </div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLEMAPS_KEY}}&callback=initMap&libraries=places"
+      async
+    ></script>
 {% endblock content %}
