--- a/tabadol/templates/places.html
+++ b/tabadol/templates/places.html
@@ -1,11 +1,7 @@
 {% extends "layout.html" %}
-{% block head %}
-<script src="{{ url_for('static', filename='autocomplete.js') }}"></script>
-
-{% endblock %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form method="POST" action="" autocomplete= "off">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                {% for field, errors in form.errors.items() %}
@@ -41,24 +37,6 @@
                    {{ form.offer_type(class="form-control-label", placeholder="Type") }}
                    {% endif %}
                 </div>
-                <div class="form-group addresses pac-container" >
-                    {{ form.addresses.label(class="form-control-label pac-input", type="text", placeholder="Enter a location") }}
-                    <!--        <div id="pac-container" class="addresses">-->
-                    <input id="pac-input" class="addresses" type="text" placeholder="Location" autocomplete="off" />
-                    <div id="map"></div>
-
-                    </div>
-                </div>
-                   {% if form.addresses.errors %}
-               <div class="invalid-feedback">
-                    {% for error in form.addresses.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                  {% else %}
-                    {{ form.addresses(class="form-control form-control-label",  placeholder="location") }}
-                  {% endif %}
-                </div>
                 <div class="form-group content">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
@@ -72,14 +50,25 @@
                         {{ form.content(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="form-group addresses">
+                  <!--   {{ form.addresses.label(class="form-control-label", type="text", placeholder="Enter a location") }} -->
+                    <div id="pac-container" class="addresses">
+                    <input id="pac-input" class="addresses" type="text" placeholder="Enter a location"  />
+                    </div>
+                </div>
+                    <div id="map"></div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-secondary") }}
             </div>
+
         </form>
     </div>
+
+
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLEMAPS_KEY}}&callback=initMap&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLEMAPS_KEY}}&callback=initMap&libraries=places&v=weekly"
       async
     ></script>
 {% endblock content %}
