--- a/tabadol/static/main.css
+++ b/tabadol/static/main.css
@@ -160,10 +160,23 @@ a.article-metadata:hover {
   margin-left: 12px;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  width: 400px;
+  width: 500px;
 }
 
 .pac-input:focus {
+  border-color: #4d90fe;
+}
+#pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 500px;
+}
+#pac-input:focus {
   border-color: #4d90fe;
 }
 
@@ -172,5 +185,10 @@ a.article-metadata:hover {
   background-color: #4d90fe;
   font-size: 25px;
   font-weight: 500;
+  padding: 6px 12px;
+}
+
+#button {
+  align-items: right;
   padding: 6px 12px;
 }
