--- a/tabadol/templates/home.html
+++ b/tabadol/templates/home.html
@@ -10,6 +10,7 @@
             </div>
             <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
+            <a class="mr-2" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.addresses }}</a>
           </div>
         </article>
     {% endfor %}
