--- a/tabadol/templates/layout.html
+++ b/tabadol/templates/layout.html
@@ -11,8 +11,9 @@
 
     <!-- maps JS -->
     <script src="{{ url_for('static', filename='gmap.js') }}"></script>
-        <script src="{{ url_for('static', filename='autocomplete.js') }}"></script>
-     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script src="{{ url_for('static', filename='autocomplete.js') }}"></script>
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 
     {% if title %}
         <title> Tabadol تبادل - {{ title }} </title>
