--- a/tabadol/templates/places.html
+++ b/tabadol/templates/places.html
@@ -23,6 +23,20 @@
                         {{ form.title(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="form-group offer-type">
+                    {{ form.offer_type.label() }}
+
+                    {% if form.offer_type.errors %}
+                    {{ form.offer_type(class="form-control-label is-invalid", placeholder="Type") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.offer_type.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                   {% else %}
+                   {{ form.offer_type(class="form-control-label", placeholder="Type") }}
+                   {% endif %}
+                </div>
                 <div class="form-group addresses pac-container" >
                     {{ form.addresses.label(class="form-control-label pac-input search_address", placeholder="Enter a location") }}
                     {% if form.addresses.errors %}
@@ -38,22 +52,8 @@
                          <small id="addressHelpBlock" class="form-text">
                           Enter for example: 'Skalitzerstrasse 52, Berlin' or 'Mitte, Berlin' or 'Stuttgart'
                         </small> </br>
-                     <div id="map"></div> </br>
-                </div></br>
-                <div class="form-group offer-type">
-                    {{ form.offer_type.label() }}
-
-                    {% if form.offer_type.errors %}
-                    {{ form.offer_type(class="form-control-label is-invalid", placeholder="Type") }}
-                <div class="invalid-feedback">
-                    {% for error in form.offer_type.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                   {% else %}
-                   {{ form.offer_type(class="form-control-label", placeholder="Type") }}
-                   {% endif %}
-                </div>
+                     </br>
+                </div></br> <div id="map"></div>
 
                 <div class="form-group content">
                     {{ form.content.label(class="form-control-label") }}
@@ -72,12 +72,13 @@
 
                 </br>
             </fieldset>
-
+              <div class="form-group">
+            {{ form.submit(class="btn btn-secondary", id="button") }}
+             </div>
         </form>
-         <div class="form-group">
-                {{ form.submit(class="btn btn-secondary", id="button") }}
-            </div>
+
     </div>
+
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key={{GOOGLEMAPS_KEY}}&callback=initMap&libraries=places&v=weekly"
