--- a/tabadol/templates/places.html
+++ b/tabadol/templates/places.html
@@ -1,11 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-<<<<<<< HEAD
         <form method="POST" action="" autocomplete= "off" onsubmit="return searchAddressSubmit()">
-=======
         <form method="POST" action="" autocomplete= "off">
->>>>>>> origin/main
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                {% for field, errors in form.errors.items() %}
@@ -32,24 +29,20 @@
 
                     {% if form.offer_type.errors %}
                     {{ form.offer_type(class="form-control-label is-invalid", placeholder="Type") }}
-<<<<<<< HEAD
                     <div class="invalid-feedback">
                         {% for error in form.offer_type.errors %}
                         <span>{{ error }}</span>
                         {% endfor %}
                     </div>
-=======
                 <div class="invalid-feedback">
                     {% for error in form.offer_type.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
->>>>>>> origin/main
                    {% else %}
                    {{ form.offer_type(class="form-control-label", placeholder="Type") }}
                    {% endif %}
                 </div>
-<<<<<<< HEAD
                 <div class="form-group addresses pac-container" >
                     {{ form.addresses.label(class="form-control-label pac-input search_address", placeholder="Enter a location") }}
                     {% if form.addresses.errors %}
@@ -67,9 +60,6 @@
                         </small> </br>
                      </br>
                 </div></br> <div id="map"></div>
-
-=======
->>>>>>> origin/main
                 <div class="form-group content">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
@@ -83,7 +73,6 @@
                         {{ form.content(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-<<<<<<< HEAD
 
 
                 </br>
@@ -94,10 +83,9 @@
         </form>
 
     </div>
+                  <!--                <div class="form-group addresses">
 
-=======
-                <div class="form-group addresses">
-                  <!--   {{ form.addresses.label(class="form-control-label", type="text", placeholder="Enter a location") }} -->
+                    {{ form.addresses.label(class="form-control-label", type="text", placeholder="Enter a location") }}
                     <div id="pac-container" class="addresses">
                     <input id="pac-input" class="addresses" type="text" placeholder="Enter a location"  />
                     </div>
@@ -110,16 +98,14 @@
 
         </form>
     </div>
+-->
 
-
->>>>>>> origin/main
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key={{GOOGLEMAPS_KEY}}&callback=initMap&libraries=places&v=weekly"
       async
     ></script>
 {% endblock content %}
-<<<<<<< HEAD
 
                  <!--
                 <div class="form-group addresses">
@@ -136,5 +122,3 @@
                     <div class="form-group col-md-1" style="margin-bottom: 0;"> -->
                   <!--      <button type="submit" class="btn btn-primary mb-2">Search</button> -->
 
-=======
->>>>>>> origin/main
