--- a/tabadol/templates/create_post.html
+++ b/tabadol/templates/create_post.html
@@ -41,7 +41,6 @@
                    {{ form.offer_type(class="form-control-label", placeholder="Type") }}
                    {% endif %}
                 </div>
-<<<<<<< HEAD
 
                <!-- <div class="form-group addresses pac-container" >
                     {{ form.addresses.label(class="form-control-label pac-input", placeholder="Enter a location") }}-->
@@ -49,17 +48,15 @@
                     <!--   <input id="pac-input" class="addresses" type="text" placeholder="Location" autocomplete="off" />
                     <div id="map"></div>
 
-=======
                 <div class="form-group addresses pac-container" >
-                    {{ form.addresses.label(class="form-control-label pac-input", type="text", placeholder="Enter a location") }}
+                    {{ form.addresses.label(class="form-control-label pac-input", type="text", placeholder="Enter a location") }} -->
                     <!--        <div id="pac-container" class="addresses">-->
-                    <input id="pac-input" class="addresses" type="text" placeholder="Location" autocomplete="off" />
+                  <!--    <input id="pac-input" class="addresses" type="text" placeholder="Location" autocomplete="off" />
                     <div id="map"></div>
 
->>>>>>> origin/main
-                    </div>
-                </div>
-                   {% if form.addresses.errors %}
+                    </div>  </div>-->
+
+                <!--   {% if form.addresses.errors %}
                <div class="invalid-feedback">
                     {% for error in form.addresses.errors %}
                     <span>{{ error }}</span>
@@ -68,7 +65,6 @@
                   {% else %}
                     {{ form.addresses(class="form-control form-control-label",  placeholder="location") }}
                   {% endif %}
-<<<<<<< HEAD
                 </div> -->
 
                 <div class="form-group addresses pac-container" >
@@ -85,9 +81,7 @@
                     {% endif %}
                 </div>
                                                     <div id="map"></div>
-=======
                 </div>
->>>>>>> origin/main
                 <div class="form-group content">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
